<resources>
    <string name="app_name">SafePak</string>

    <string-array name="blood_groups">
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>O-</item>
    </string-array>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="level2_header">Level-2</string>

    <!-- Preferences -->
    <string name="sim_settings">Send location through sim</string>
    <string name="gesture_settings">Enable off-screen gestures</string>
    <string name="video_settings">Record video</string>
    <string name="face_settings">AI face extract</string>
    <string name="map_settings">Search for nearby people</string>



    <string name="title_activity_directions">DirectionsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blood_broadcast">BloodBroadcastActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <!-- Strings used for fragments for navigation -->

</resources>